# ltchiptool

./: .gitignore  README.md  build-gui.py  cli.py  gui-win32.py  gui-win32.spec  gui.py  ltchiptool.py  package.json  pyproject.toml
.github/workflows/: publish.yml  push-dev.yml  push.yml  release.yml
ltchiptool/: __init__.py  __main__.py  version.py
ltchiptool/cli/: __init__.py  cli.py  dumptool.py  elf2bin.py  link2bin.py  list.py  soc.py
ltchiptool/commands/: dumptool.py  elf2bin.py  flash.py  link2bin.py  list.py  soc.py
ltchiptool/commands/compile/: link2bin.py
ltchiptool/commands/flash/: __main__.py  _utils.py  file.py  info.py  read.py  split.py  write.py
ltchiptool/commands/plugin/: manage.py  run.py
ltchiptool/gui/: __init__.py  __main__.py  _base.py  _utils.py  colors.json  colors.py  flash.py  install.py  log.py  ltchiptool.wxui  ltchiptool.xrc  main.py  utils.py
ltchiptool/gui/base/: frame.py  panel.py  window.py  zc.py
ltchiptool/gui/mixin/: __init__.py  devices.py  file_dump.py
ltchiptool/gui/panels/: __init__.py  about.py  base.py  flash.py  install.py  log.py  plugins.py  upk.py
ltchiptool/gui/res/: gui.spec.py  ltchiptool.wxui  ltchiptool.xrc  sitecustomize.py
ltchiptool/gui/work/: __init__.py  base.py  devices.py  flash.py  install.py  plugins.py  ports.py  upk.py
ltchiptool/models/: __init__.py  board.py  enums.py  family.py
ltchiptool/soc/: __init__.py  common.py  interface.py
ltchiptool/soc/amb/: efuse.py  system.py
ltchiptool/soc/ambz/: __init__.py  binary.py  elf2bin.py  flash.py  main.py  upload.py
ltchiptool/soc/ambz/util/: ambzcode.py  ambztool.py  rtltool.py
ltchiptool/soc/ambz2/: __init__.py  binary.py  elf2bin.py  flash.py  main.py  parse_partition.py
ltchiptool/soc/ambz2/util/: __init__.py  ambz2code.py  ambz2tool.py  ota.py
ltchiptool/soc/ambz2/util/models/: __init__.py  config.py  enums.py  headers.py  images.py  partitions.py  utils.py
ltchiptool/soc/bk72xx/: __init__.py  binary.py  bkpackager.py  elf2bin.py  flash.py  main.py  upload.py
ltchiptool/soc/bk72xx/util/: __init__.py  binary.py  crypto.py  models.py  rbl.py
ltchiptool/soc/ln882h/: __init__.py  binary.py  flash.py  main.py
ltchiptool/soc/ln882h/util/: __init__.py  ln882htool.py  makeimage.py  ota_image_generator.py
ltchiptool/soc/ln882h/util/models/: __init__.py  boot_header.py  image_header.py  ln_tools.py  part_desc_info.py
ltchiptool/soc/ln882x/: __init__.py  binary.py  flash.py  main.py
ltchiptool/soc/ln882x/util/: __init__.py  boot_header.py  image_header.py  ln_tools.py  makeimage.py  ota_image_generator.py  part_desc_info.py
ltchiptool/soc/ln882x/util/models/: image_header.py  ln_tools.py
ltchiptool/util/: __init__.py  bitint.py  cli.py  crc16.py  crypto.py  curve25519.py  detection.py  dict.py  env.py  fileio.py  flash.py  fwbinary.py  intbin.py  logging.py  lpm.py  ltim.py  ltim_windows.py  lvm.py  misc.py  obj.py  serialtool.py  slice.py  streams.py  toolchain.py
ltctplugin/base/: __init__.py  base.py
pyinstaller/: build-gui.py  gui-macos.spec.py  gui-windows.spec.py  gui.spec.py
tests/: firmware.json  flash_partition_cfg.json
uf2ota/: uf2ota.c  uf2ota.h  uf2priv.c  uf2priv.h  uf2types.h
uf2tool/: __init__.py  cli.py  writer.py
uf2tool/binpatch/: __init__.py  apply.py  bindiff.py  diff32.py
uf2tool/models/: __init__.py  block.py  context.py  enums.py  flags.py  image.py  input.py  partition.py  uf2.py
uf2tool/upload/: __init__.py  esphome.py
