[tool.poetry]
name = "ltchiptool"
version = "3.0.0a3"
description = "Tools for working with LT-supported IoT chips"
authors = ["Kuba Szczodrzyński <kuba@szczodrzynski.pl>"]
license = "MIT"
packages = [
    { include = "ltchiptool" },
    { include = "uf2tool" },
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"
colorama = "^0.4.5"
importlib-metadata = "^4.12.0"
prettytable = "^3.3.0"
bk7231tools = "^1.2.1"
pycryptodomex = "^3.15.0"
xmodem = "^0.4.6"
wxPython = {version = "^4.2.0", optional = true}
pywin32 = {version = "^305", optional = true}

[tool.poetry.extras]
gui = ["wxPython", "pywin32"]

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
autoflake = "^1.4"

[tool.poetry.scripts]
ltchiptool = "ltchiptool:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
