[tool.poetry]
name = "ltchiptool"
version = "4.12.0"
description = "Universal flashing and binary manipulation tool for IoT chips"
authors = ["Kuba Szczodrzyński <kuba@szczodrzynski.pl>"]
license = "MIT"
packages = [
    { include = "ltchiptool" },
    { include = "ltctplugin/base" },
    { include = "uf2tool" },
]
include = [
    { path = "ltchiptool/platform.json", format = ["sdist", "wheel"] },
    { path = "ltchiptool/families.json", format = ["sdist", "wheel"] },
    { path = "ltchiptool/boards/*", format = ["sdist", "wheel"] },
    { path = "ltchiptool/boards/**/*", format = ["sdist", "wheel"] } ,
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"
colorama = "^0.4.5"
importlib-metadata = "*"
prettytable = "^3.3.0"
bk7231tools = "^2.0.0"
xmodem = "^0.4.6"
ymodem = "^1.5.1"
wxPython = {version = "^4.2.0", optional = true}
pywin32 = {version = "*", optional = true, markers = "sys_platform == 'win32'"}
py-datastruct = "^1.0.0"
semantic-version = "^2.10.0"
hexdump = "^3.3"
bitstruct = "^8.1.1"
zeroconf = {version = "<=0.128.4", optional = true}
requests = "^2.31.0"
pyuac = {version = "^0.0.3", optional = true, markers = "sys_platform == 'win32'"}
pylnk3 = {version = "^0.4.2", optional = true, markers = "sys_platform == 'win32'"}

[tool.poetry.dependencies.pycryptodome]
version = "^3.9.9"
markers = "platform_machine not in 'armv6l,armv7l,armv8l,armv8b,aarch64'"

[tool.poetry.dependencies.pyaes]
version = "^1.6.1"
markers = "platform_machine in 'armv6l,armv7l,armv8l,armv8b,aarch64'"

[tool.poetry.extras]
gui = ["wxPython", "pywin32", "zeroconf", "pyuac", "pylnk3"]

[tool.poetry.dev-dependencies]
black = {version = "^24.1.0", markers = "python_version >= '3.8'"}
isort = "^5.10.1"
autoflake = "^1.4"

[tool.poetry.scripts]
ltchiptool = "ltchiptool:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
